--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,17 +23,16 @@
         android:layout_width="match_parent"
         android:background="@color/white"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        />
+        android:layout_weight="1" />
 
-    <LinearLayout
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_gravity="center_vertical"
-        android:gravity="center"
-        android:layout_height="wrap_content">
-
-
-    </LinearLayout>
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -42,21 +41,21 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:orientation="horizontal">
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/save_button"
             android:layout_width="wrap_content"
             app:backgroundTint="@color/primary"
             android:layout_height="wrap_content"
             android:text="Save Data"
-            android:layout_gravity="center"
-            />
+            android:layout_gravity="center" />
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/clear_button"
             android:layout_width="wrap_content"
             app:cardCornerRadius="50dp"
             android:elevation="8dp"
-            android:layout_margin="10.dp"
+            android:layout_margin="10dp"
             android:layout_height="wrap_content">
 
             <ImageView
@@ -65,42 +64,6 @@
                 android:padding="10dp"
                 android:src="@drawable/baseline_close_24" />
         </com.google.android.material.card.MaterialCardView>
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="wrap_content"
-            app:cardCornerRadius="50dp"
-            android:elevation="8dp"
-            android:padding="10.dp"
-            android:layout_height="wrap_content">
 
-            <ImageView
-                android:id="@+id/prev_page_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:src="@drawable/baseline_arrow_back_ios_24" />
-        </com.google.android.material.card.MaterialCardView>
-
-        <TextView
-            android:id="@+id/page_number_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:text="Page 1"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            />
-
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="wrap_content"
-            app:cardCornerRadius="50dp"
-            android:elevation="8dp"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:id="@+id/next_page_button"
-                android:padding="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/baseline_arrow_forward_ios_24"/>
-        </com.google.android.material.card.MaterialCardView>
     </LinearLayout>
 </LinearLayout>
