--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorStroke">#00abf9</color>
     <color name="colorCanvas">#ffffff</color>
     <color name="colorGuideText">#eeeeee</color>
+    <color name="pageNumberBg">#651FFF</color>
 </resources>
